# SoftwareRenderer

./: .gitignore  CMakeLists.txt
include/: Mathematics.h  ProgramContext.h  UserInterface.h  Viewport.h
include/Interface/: Commands.h  GLViewport.h
include/Mathematics/: Matrix4f.h
include/Render/: PointMesh.h  PolygonMesh.h  Primitives.h  SoftwareRenderer.h  TriangleMesh.h
include/Simulation/: NGLCamera.h  Scene.h
include/Storage/: IMeshData.h  StorageRecordTypes.h  WavefrontObject.h
resources/shaders/: PBRVertex.glsl
src/: Commands.cpp  ProgramContext.cpp  main.cpp
src/Render/: Camera.cpp  PointMesh.cpp  PolygonMesh.cpp  Primitives.cpp  Scene.cpp  SoftwareRenderer.cpp  TriangleMesh.cpp
src/Simulation/: NGLCamera.cpp  Scene.cpp
src/UI/: GLViewport.cpp  UserInterface.cpp
src/UI/Widget/3D/: Viewport.cpp
src/util/Mathematics/: Axes.cpp  Matrix4f.cpp  Quaternion.cpp  Transformation.cpp  Tri.cpp  Vec3.cpp
src/util/Mathematics/Vector/: Vec2.cpp  Vec3.cpp
src/util/Storage/: StorageRecordTypes.cpp  VertexData.cpp  WavefrontObject.cpp
